<resources>
    <string name="app_name">FishingShop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="left_menu_titles">
        <item>Профиль</item>
        <item>Избранное</item>
        <item>Реквизиты</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="title_activity_confirmation_v2">ConfirmationActivityV2</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="requisites">
        Индивидуальный предприниматель ГУЛЕНКО ДМИТРИЙ АЛЕКСЕЕВИЧ\n
        Расчётный счёт: 40802810330000072967\n
        Банк: КРАСНОДАРСКОЕ ОТДЕЛЕНИЕ N8619 ПАО СБЕРБАНК\n
        БИК: 040349602\n
        Кор. Cчёт: 30101810100000000602\n
        ОГРН: 319237500379634\n
        ИНН: 781117867809\n
        КПП: —\n\n
        Краснодарский край, станица Каневская, ул. Свердликова, дом 116\n\n
        Телефон: +79676726107, +79528535974
    </string>
    <string name="logout">Выход</string>
    <string name="internet_shop">интернет-магазин</string>
    <string name="fishing_shop">“Fishing Shop”</string>
    <string name="get_code">Получить код</string>
    <string name="get_subscription_for_content">Оформите подписку на контент приложения</string>
    <string name="get_subscription">Оформить подписку</string>
    <string name="error">error</string>
    <string name="price_example">999</string>
    <string name="product_name_example">Леска цветная для карпа</string>
    <string name="characteristics_example">Краткие характеристики</string>
    <string name="quantity_example">2 шт</string>
    <string name="rods">Удилища</string>
    <string name="category_description">Описание категории</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="write_your_data">Заполните ваши данные</string>
    <string name="fio_number_email">ФИО, Телефон, Email…</string>
    <string name="back_to_profile">Перейти в профиль</string>
    <string name="cart">Корзина</string>
    <string name="amount">Сумма:</string>
    <string name="zero_rub">0 руб.</string>
    <string name="confirm">Оформить</string>
    <string name="catalog">Каталог</string>
    <string name="favorites">Избранное</string>
    <string name="main">Главная</string>
    <string name="search">Поиск...</string>
    <string name="discounts">Акции \nи предложения</string>
    <string name="discounts_for_you">Все самые выгодные акции для вас</string>
    <string name="actual">Актуальное</string>
    <string name="NEW">NEW</string>
    <string name="news">НОВИНКИ</string>
    <string name="actual_in_season">Актуальное в этом сезоне</string>
    <string name="sale">SALE</string>
    <string name="sales">РАСПРОДАЖИ</string>
    <string name="profitable_prices">Только выгодные предложения</string>
    <string name="delivery">Доставка</string>
    <string name="region">Регион/республика</string>
    <string name="index">Индекс</string>
    <string name="city">Город, село</string>
    <string name="street_home">Улица, дом, квартира</string>
    <string name="no_delivery">Самовывоз</string>
    <string name="get_from_shop">Я заберу с магазина</string>
    <string name="shop_adresses">Адрес(а) магазина(ов)</string>
    <string name="manager_call">После оформления заказа, наш менеджер свяжется с вами в течение 60 минут, в рабочие часы.</string>
    <string name="purchase">Оформить заказ</string>
    <string name="price">Цена:</string>
    <string name="to_cart">В корзину</string>
    <string name="coils">Катушки</string>
    <string name="profile">Профиль</string>
    <string name="your_data">Ваши данные</string>
    <string name="your_data_warning">Эти данные необходимы для оформления заказа в нашем магазине.</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="third_name">Отчество</string>
    <string name="phone_example">+7 (999) 000 13 15</string>
    <string name="email">Email</string>
    <string name="save_data">Сохранить данные</string>
    <string name="back">Назад</string>
    <string name="share">Акция</string>
    <string name="to_main">На главную</string>
</resources>