<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@mipmap/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/avenir_next_bold"
            android:lineSpacingExtra="8sp"
            android:text="@string/cart"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <include
        android:id="@+id/profile_button"
        layout="@layout/fio_button"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/avenir_next_bold"
        android:lineSpacingExtra="8sp"
        android:text="@string/delivery"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/region"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#209bd5c5"
        android:hint="@string/region"
        android:padding="5dp"
        android:textColorHint="@color/white_transparent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/index"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_bg"
            android:backgroundTint="#209bd5c5"
            android:hint="@string/index"
            android:padding="5dp"
            android:inputType="number"
            android:textColorHint="@color/white_transparent" />

        <EditText
            android:id="@+id/city"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_bg"
            android:backgroundTint="#209bd5c5"
            android:hint="@string/city"
            android:padding="5dp"
            android:textColorHint="@color/white_transparent" />
    </LinearLayout>

    <EditText
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#209bd5c5"
        android:hint="@string/street_home"
        android:padding="5dp"
        android:textColorHint="@color/white_transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/avenir_next_bold"
        android:lineSpacingExtra="8sp"
        android:text="@string/no_delivery"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/get_from_shop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/yellow_transparent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/avenir_next_bold"
            android:lineSpacingExtra="8sp"
            android:text="@string/get_from_shop"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/avenir_next_light"
            android:lineSpacingExtra="5sp"
            android:text="@string/shop_adresses"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avenir_next_light"
        android:text="@string/manager_call"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/confirm_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/auth_button_bg_green"
        android:orientation="horizontal"
        android:textStyle="bold">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/purchase"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>