<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="90dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="130dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/avenir_next_bold"
        android:lineSpacingExtra="10sp"
        android:text="@string/profile"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_next_bold"
        android:lineSpacingExtra="8sp"
        android:text="@string/your_data"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_next_light"
        android:text="@string/your_data_warning"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_bg"
            android:backgroundTint="#209bd5c5"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:textColorHint="@color/white_transparent" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_bg"
            android:backgroundTint="#209bd5c5"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:textColorHint="@color/white_transparent" />

        <EditText
            android:id="@+id/third_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_bg"
            android:backgroundTint="#209bd5c5"
            android:hint="@string/third_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:textColorHint="@color/white_transparent" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_bg"
            android:backgroundTint="#209bd5c5"
            android:hint="@string/phone_example"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="5dp"
            android:textColorHint="@color/white_transparent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_bg"
            android:backgroundTint="#209bd5c5"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="5dp"
            android:textColorHint="@color/white_transparent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/auth_button_bg_green"
        android:orientation="horizontal"
        android:textStyle="bold">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/save_data"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>