<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="60dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:id="@+id/search_product_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_bg">

            <EditText
                android:id="@+id/search_product"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/search_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="3dp"
                android:contentDescription="@string/search"
                android:src="@drawable/search_icon"
                app:tint="@color/brown" />
        </RelativeLayout>

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:fontFamily="@font/avenir_next_bold"
            android:lineSpacingExtra="3sp"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4">

            <LinearLayout
                android:id="@+id/product_images_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="3">

            <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/avenir_next_medium"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="normal" />
        </ScrollView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_to_favorites_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/auth_button_bg_brown"
                android:backgroundTint="#584434"
                android:paddingTop="5dp"
                android:src="@drawable/ic_diamond" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:fontFamily="@font/avenir_next_bold"
                android:text="@string/price"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/avenir_next_bold"
                android:lineSpacingExtra="7sp"
                android:paddingStart="10dp"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:id="@+id/back_button"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/auth_button_bg_brown"
                android:gravity="center"
                android:orientation="horizontal"
                android:textStyle="bold">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/back_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_to_cart_button"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/auth_button_bg_green"
                android:gravity="center"
                android:orientation="horizontal"
                android:textStyle="bold">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_bold"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/to_cart"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:src="@mipmap/basket"
                    app:tint="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>